--- a/src/main/webapp/lab/institution.xhtml
+++ b/src/main/webapp/lab/institution.xhtml
@@ -122,6 +122,10 @@
                                                 <h:outputText id="lblEMail" value="Email" ></h:outputText>
                                                 <p:inputText autocomplete="off" id="txtEmail" value="#{institutionController.current.email}"  ></p:inputText>
 
+                                                <h:outputText id="lblEMailOwner" value="Owner Email" ></h:outputText>
+                                                <p:inputText autocomplete="off" id="txtOwnerEmail" value="#{institutionController.current.ownerEmail}"  ></p:inputText>
+
+
                                                 <h:outputText id="lblAdress" value="Address" ></h:outputText>
                                                 <p:inputTextarea id="txtAdress" value="#{institutionController.current.address}" styleClass="longText" ></p:inputTextarea>
 
