Settle Bill Date time and agency errors in all bill types

--- a/src/main/webapp/lab/investigation_format.xhtml
+++ b/src/main/webapp/lab/investigation_format.xhtml
@@ -529,7 +529,8 @@
                                     <p:tab title="Developer" >
                                         <p:dialog modal="true" widgetVar="statusDialog" header="Status" draggable="false" closable="false" resizable="false">
                                         </p:dialog>
-
+                                        <p:outputLabel value="ID : " ></p:outputLabel>
+                                        <p:inputText value="#{investigationItemController.current.id}"/>
 
                                         <p:commandButton value="Download" ajax="false" onclick="PrimeFaces.monitorDownload(start, stop);" icon="ui-icon-arrowthick-1-s">
                                             <p:fileDownload value="#{investigationItemController.downloadingFile}" />
