Centering of Contexts Removed Patient Report Error Debugged

--- a/src/main/webapp/channel/channel_agent_referece_book.xhtml
+++ b/src/main/webapp/channel/channel_agent_referece_book.xhtml
@@ -12,7 +12,7 @@
 
         <h:form>
 
-            <p:panel header="Cannel Agent Reference Book" styleClass="verticalAndHorizontalCenteringLarge">
+            <p:panel header="Cannel Agent Reference Book" >
 
                 <p:tabView id="tabView">
                     <p:tab title="Book Details">
