--- a/src/main/webapp/clinical/clinical_favourite_item.xhtml
+++ b/src/main/webapp/clinical/clinical_favourite_item.xhtml
@@ -14,7 +14,7 @@
             <ui:define name="content">
 
                 <h:form >
-                    <p:panel styleClass="verticalAndHorizontalCenteringLarge" >
+                    <p:panel  >
                         <f:facet name="header" >
                             <h:outputText value="Manage Favourite Medicines" >
                             </h:outputText>
