--- a/src/main/webapp/lab/agent_referece_book.xhtml
+++ b/src/main/webapp/lab/agent_referece_book.xhtml
@@ -12,7 +12,7 @@
 
         <h:form>
 
-            <p:panel header="Collecting Centre Reference Book" styleClass="verticalAndHorizontalCenteringLarge">
+            <p:panel header="Collecting Centre Reference Book" >
 
                 <p:panelGrid columns="2" >
                     <p:outputLabel value="Collecting Centre Name" />
