--- a/src/main/webapp/lab/institution.xhtml
+++ b/src/main/webapp/lab/institution.xhtml
@@ -19,7 +19,7 @@
 
 
 
-                <p:panel styleClass="verticalAndHorizontalCenteringLarge">
+                <p:panel >
                     <f:facet name="header" >
                         <p:outputLabel value="Manage Institutions" ></p:outputLabel>
                         <p:commandButton id="btnBack" value="Back" 
