--- a/src/main/webapp/lab/investigation_category.xhtml
+++ b/src/main/webapp/lab/investigation_category.xhtml
@@ -18,7 +18,7 @@
 
 
 
-                <p:panel styleClass="verticalAndHorizontalCenteringLarge">
+                <p:panel >
                     <f:facet name="header" >
                         <p:outputLabel value="Manage Investigation Categories" ></p:outputLabel>
                         <p:spacer height="1" width="200" ></p:spacer>
