--- a/src/main/webapp/lab/report_format_category.xhtml
+++ b/src/main/webapp/lab/report_format_category.xhtml
@@ -10,7 +10,7 @@
         <h:form  >
             <p:focus id="selectFocus" for="lstSelect"  />
             <p:focus id="detailFocus" for="txtName" />
-            <p:panel header="Manage Report Format Categories" styleClass="verticalAndHorizontalCenteringLarge">
+            <p:panel header="Manage Report Format Categories" >
                 <p:panelGrid columns="2"  styleClass="alignTop">
                     <p:panel  >
                         <p:selectOneListbox   id="lstSelect"   value="#{reportFormatController.current}" styleClass="listBox">
