--- a/src/main/webapp/opd_service_subcategory.xhtml
+++ b/src/main/webapp/opd_service_subcategory.xhtml
@@ -18,7 +18,7 @@
 
 
 
-                <p:panel header="Manage Service Subcategory" styleClass="verticalAndHorizontalCenteringLarge">
+                <p:panel header="Manage Service Subcategory" >
                     <h:panelGrid id ="gpVeda" columns="3" styleClass="alignTop">
 
                         <h:panelGrid id="gpSelect" columns="1"  >
