--- a/src/main/webapp/pharmacy/pharmacy_measurement_unit.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_measurement_unit.xhtml
@@ -18,7 +18,7 @@
 
 
 
-                <p:panel  styleClass="verticalAndHorizontalCenteringLarge">
+                <p:panel  >
                     <f:facet name="header" >
                         <h:outputLabel value="Manage Measurement Units" ></h:outputLabel>
                         <p:commandButton value="Back" ajax="false" action="/pharmacy/pharmacy_admin" icon="ui-icon-circle-triangle-w" style="float: right;" ></p:commandButton>
