--- a/src/main/webapp/pharmacy/pharmacy_pharmaceutical_item_category.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_pharmaceutical_item_category.xhtml
@@ -18,7 +18,7 @@
 
 
 
-                <p:panel styleClass="verticalAndHorizontalCenteringLarge">
+                <p:panel >
                     
                     <f:facet name="header" >
                         <h:outputLabel value="Manage Pharmaceutical Item Categories" ></h:outputLabel>
