--- a/src/main/webapp/pharmacy/pharmacy_pharmaceutical_item_type.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_pharmaceutical_item_type.xhtml
@@ -19,7 +19,7 @@
 
 
 
-            <p:panel  styleClass="verticalAndHorizontalCenteringLarge">
+            <p:panel  >
 
                 <f:facet name="header" >
                     <h:outputLabel value="Manage Pharmaceutical Item Types" ></h:outputLabel>
