--- a/src/main/webapp/pharmacy/pharmacy_vmp.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_vmp.xhtml
@@ -9,7 +9,7 @@
 
     <ui:define name="content">
         <h:form>
-            <p:panel header="Manage Products" styleClass="verticalAndHorizontalCenteringLarge" >
+            <p:panel header="Manage Products"  >
                 <h:panelGrid columns="2" style="min-width: 100%;"  styleClass="alignTop" >
                     <p:panel header="List" >
                         <h:inputText autocomplete="off"  value="#{vmpController.selectText}" >
