--- a/src/main/webapp/admin_doctor_speciality.xhtml
+++ b/src/main/webapp/admin_doctor_speciality.xhtml
@@ -18,7 +18,7 @@
 
 
 
-                <p:panel header="Manage Doctor Speciality" styleClass="verticalAndHorizontalCenteringLarge">
+                <p:panel header="Manage Doctor Speciality" >
                     <h:panelGrid id ="gpVeda" columns="2" styleClass="alignTop">
 
                         <h:panelGrid id="gpSelect" columns="1"  >
