--- a/src/main/webapp/admin_user_staff.xhtml
+++ b/src/main/webapp/admin_user_staff.xhtml
@@ -22,7 +22,7 @@
 
         <h:panelGroup rendered="#{webUserController.hasPrivilege('AdminManagingUsers')}" >
             <h:form  >
-                <p:panel header="Allow user to log on to Departments" styleClass="verticalAndHorizontalCenteringLarge">
+                <p:panel header="Allow user to log on to Departments" >
                     <h:panelGrid  columns="2" >                          
                         <h:outputLabel value="Select User"/>
                         <p:autoComplete id="user" converter="webUs" forceSelection="true"  completeMethod="#{webUserController.completeUser}" var="us" itemLabel="#{us.webUserPerson.name}" itemValue="#{us}"  value="#{webUserController.current}" >
