--- a/src/main/webapp/clinical/clinical_diagnosis.xhtml
+++ b/src/main/webapp/clinical/clinical_diagnosis.xhtml
@@ -18,7 +18,7 @@
 
 
 
-                <p:panel header="Manage Diagnosis" styleClass="verticalAndHorizontalCenteringLarge">
+                <p:panel header="Manage Diagnosis" >
                     <h:panelGrid id ="gpVeda" columns="2" styleClass="alignTop">
 
                         <h:panelGrid id="gpSelect" columns="1"  >
