--- a/src/main/webapp/clinical/clinical_procedures.xhtml
+++ b/src/main/webapp/clinical/clinical_procedures.xhtml
@@ -18,7 +18,7 @@
 
 
 
-                <p:panel header="Manage Procedures" styleClass="verticalAndHorizontalCenteringLarge">
+                <p:panel header="Manage Procedures" >
                     <h:panelGrid id ="gpVeda" columns="2" styleClass="alignTop">
 
                         <h:panelGrid id="gpSelect" columns="1"  >
