--- a/src/main/webapp/clinical/clinical_treatment.xhtml
+++ b/src/main/webapp/clinical/clinical_treatment.xhtml
@@ -18,7 +18,7 @@
 
 
 
-                <p:panel  styleClass="verticalAndHorizontalCenteringLarge" >
+                <p:panel   >
                     
                     <f:facet name="header" >
                         <h:outputText value="Manage Treatments" ></h:outputText>
