--- a/src/main/webapp/common/bill_expenses.xhtml
+++ b/src/main/webapp/common/bill_expenses.xhtml
@@ -14,7 +14,7 @@
             <h:form id="form"  >
                 <p:growl />
 
-                <p:panel header="Manage Bill Expenses" styleClass="verticalAndHorizontalCenteringLarge">
+                <p:panel header="Manage Bill Expenses" >
                     <h:panelGrid id ="gpVeda" columns="2" styleClass="alignTop" >
 
                         <h:panelGrid id="gpSelect" columns="1"  >
