--- a/src/main/webapp/common/metadata_super_category.xhtml
+++ b/src/main/webapp/common/metadata_super_category.xhtml
@@ -18,7 +18,7 @@
 
 
  
-                <p:panel header="Manage Category Tube" styleClass="verticalAndHorizontalCenteringLarge">
+                <p:panel header="Manage Category Tube" >
                     <h:panelGrid id ="gpVeda" columns="2" styleClass="alignTop" >
 
                         <h:panelGrid id="gpSelect" columns="1" styleClass="alignTop"  >
