--- a/src/main/webapp/hr/hr_paysheet_component.xhtml
+++ b/src/main/webapp/hr/hr_paysheet_component.xhtml
@@ -18,7 +18,7 @@
 
 
 
-                <p:panel header="Manage Paysheet Component" styleClass="verticalAndHorizontalCenteringLarge">
+                <p:panel header="Manage Paysheet Component" >
                     <h:panelGrid id ="gpVeda" columns="2" styleClass="alignTop">
 
                         <h:panelGrid id="gpSelect" columns="1"  >
