--- a/src/main/webapp/hr/hr_ph_date.xhtml
+++ b/src/main/webapp/hr/hr_ph_date.xhtml
@@ -8,7 +8,7 @@
 
     <ui:define name="content">
         <h:form>
-            <p:panel header="Manage Holiday" styleClass="verticalAndHorizontalCenteringLarge">
+            <p:panel header="Manage Holiday" >
                 <h:panelGrid id ="gpVeda" columns="2" styleClass="alignTop">
 
                     <h:panelGrid id="gpSelect" columns="1"  >
