--- a/src/main/webapp/hr/hr_salary_cycle.xhtml
+++ b/src/main/webapp/hr/hr_salary_cycle.xhtml
@@ -18,7 +18,7 @@
 
 
 
-                <p:panel header="Manage Salary Cycle" styleClass="verticalAndHorizontalCenteringLarge">
+                <p:panel header="Manage Salary Cycle" >
                     <h:panelGrid id ="gpVeda" columns="2" >
 
                         <h:panelGrid id="gpSelect" columns="1"  >
