--- a/src/main/webapp/hr/hr_staff_designation.xhtml
+++ b/src/main/webapp/hr/hr_staff_designation.xhtml
@@ -17,7 +17,7 @@
 
 
 
-                <p:panel header="Manage Designation" styleClass="verticalAndHorizontalCenteringLarge">
+                <p:panel header="Manage Designation" >
                     <h:panelGrid id ="gpVeda" columns="2" styleClass="alignTop">
 
                         <h:panelGrid id="gpSelect" columns="1"  >
