--- a/src/main/webapp/lab/institution_branch.xhtml
+++ b/src/main/webapp/lab/institution_branch.xhtml
@@ -18,7 +18,7 @@
 
 
 
-                <p:panel header="Manage Institution Branch" styleClass="verticalAndHorizontalCenteringLarge">
+                <p:panel header="Manage Institution Branch" >
 
                     <div id="Temp" style="position: relative;left:0%;">
                         <h:panelGrid id ="gpVeda" columns="2" styleClass="alignTop">
