--- a/src/main/webapp/lab/institutions_udate_credit_limit.xhtml
+++ b/src/main/webapp/lab/institutions_udate_credit_limit.xhtml
@@ -18,7 +18,7 @@
 
 
 
-                <p:panel header="Manage Collecting Centre Credit Limits" styleClass="verticalAndHorizontalCenteringLarge">
+                <p:panel header="Manage Collecting Centre Credit Limits" >
 
                     <div id="Temp" style="position: relative;left: 0%;">
                         <h:panelGrid id ="gpVeda" columns="2" >
