--- a/src/main/webapp/lab/investigation_item_value.xhtml
+++ b/src/main/webapp/lab/investigation_item_value.xhtml
@@ -15,7 +15,7 @@
                 <h:form >
 
 
-                    <p:panel header="Manage Investigatio Field value suggestions and defaults" styleClass="verticalAndHorizontalCenteringLarge">
+                    <p:panel header="Manage Investigatio Field value suggestions and defaults" >
 
                         <p:panelGrid columns="1" >
 
