--- a/src/main/webapp/lab/machine.xhtml
+++ b/src/main/webapp/lab/machine.xhtml
@@ -18,7 +18,7 @@
 
 
 
-                <p:panel header="Manage Analyzer Details" styleClass="verticalAndHorizontalCenteringLarge">
+                <p:panel header="Manage Analyzer Details" >
                     <h:panelGrid id ="gpVeda" columns="2" styleClass="alignTop">
 
                         <h:panelGrid id="gpSelect" columns="1"  >
