--- a/src/main/webapp/memberShip/payment_scheme_payment_method_allowed.xhtml
+++ b/src/main/webapp/memberShip/payment_scheme_payment_method_allowed.xhtml
@@ -18,7 +18,7 @@
 
 
 
-                <p:panel header="Manage Discount Scheme Payment Method" styleClass="verticalAndHorizontalCenteringLarge">
+                <p:panel header="Manage Discount Scheme Payment Method" >
                     <h:panelGrid id ="gpVeda" columns="2" styleClass="alignTop">
 
                         <h:panelGrid id="gpSelect" columns="1"  >
