--- a/src/main/webapp/pharmacy/pharmacy_frequency_unit.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_frequency_unit.xhtml
@@ -18,7 +18,7 @@
 
 
 
-                <p:panel header="Manage Measurement Unit" styleClass="verticalAndHorizontalCenteringLarge">
+                <p:panel header="Manage Measurement Unit" >
                     
                     
                     <h:panelGrid id ="gpVeda" columns="2" styleClass="alignTop">
