--- a/src/main/webapp/pharmacy/pharmacy_manufacturer.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_manufacturer.xhtml
@@ -18,7 +18,7 @@
 
 
 
-                <p:panel header="Manage Pharmecy Manufacturer" styleClass="verticalAndHorizontalCenteringLarge">
+                <p:panel header="Manage Pharmecy Manufacturer" >
                     <h:panelGrid id ="gpVeda" columns="2" styleClass="alignTop">
 
                         <h:panelGrid id="gpSelect" columns="1"  >
