--- a/src/main/webapp/relationships.xhtml
+++ b/src/main/webapp/relationships.xhtml
@@ -12,7 +12,7 @@
 
             <ui:define name="content">
                 <h:form>
-                    <p:panel header="Manage Relationships" styleClass="verticalAndHorizontalCenteringLarge" >
+                    <p:panel header="Manage Relationships"  >
                         <table >
                             <tr>
                                 <td>
