Before Starting Memberships Signed-off-by: Buddhika Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/admin_items.xhtml
+++ b/src/main/webapp/admin_items.xhtml
@@ -19,7 +19,7 @@
                                 <h:panelGrid columns="1" >
 
 
-                                    <p:commandButton  styleClass="linkButton" ajax="false" value="Investigations" action="/lab_investigation" onclick="onSubmitButton();"/>
+                                    <p:commandButton  styleClass="linkButton" ajax="false" value="Investigations" action="/lab/investigation" onclick="onSubmitButton();"/>
                                     <p:commandButton  styleClass="linkButton" ajax="false" value="Investigation Fees" action="/lab/investigation_fee" onclick="onSubmitButton();"/>
                                     <p:commandButton  styleClass="linkButton" ajax="false" value="Service Categories" action="/opd_service_category" onclick="onSubmitButton();"/>
                                     <p:commandButton  styleClass="linkButton" ajax="false" value="Service Subcategories" action="/opd_service_subcategory" onclick="onSubmitButton();"/>
