--- a/src/main/webapp/lab/search_for_reporting_1.xhtml
+++ b/src/main/webapp/lab/search_for_reporting_1.xhtml
@@ -107,10 +107,10 @@
                                     <p:commandButton ajax="false" rendered="#{pi.received}" value="Result Entry"  action="#{patientReportController.lastPatientReport(pi)}" onclick="onSubmitButton();" >
                                         <f:setPropertyActionListener value="#{pi}" target="#{patientReportController.currentPtIx}"></f:setPropertyActionListener>
                                     </p:commandButton>
-                                    <p:commandButton ajax="false" rendered="#{pi.received}" value="New Result" action="/lab_patient_report" actionListener="#{patientReportController.createNewReport(pi)}" onclick="onSubmitButton();" >
+                                    <p:commandButton ajax="false" rendered="#{pi.received}" value="New Result" action="/lab/patient_report" actionListener="#{patientReportController.createNewReport(pi)}" onclick="onSubmitButton();" >
                                         <f:setPropertyActionListener value="#{pi}" target="#{patientReportController.currentPtIx}"></f:setPropertyActionListener>
                                     </p:commandButton>
-                                    <p:commandButton ajax="false" rendered="#{pi.received}" value="New Format" action="/lab_ix_for_ix" onclick="onSubmitButton();"  >
+                                    <p:commandButton ajax="false" rendered="#{pi.received}" value="New Format" action="/lab/ix_for_ix" onclick="onSubmitButton();"  >
                                         <f:setPropertyActionListener value="#{pi}" target="#{patientReportController.currentPtIx}"></f:setPropertyActionListener>
                                         <f:setPropertyActionListener value="#{pi}" target="#{itemForItemController.patientIx}"></f:setPropertyActionListener>
                                     </p:commandButton>
