--- a/src/main/webapp/lab/search_reports.xhtml
+++ b/src/main/webapp/lab/search_reports.xhtml
@@ -126,7 +126,7 @@
                                         <f:setPropertyActionListener value="#{pi}" target="#{patientInvestigationController.current}" ></f:setPropertyActionListener>
                                         <p:graphicImage library="image" styleClass="standedicon" name="worksheet.gif" ></p:graphicImage>
                                     </p:commandLink>
-                                    <p:commandLink id="btnNewReport" ajax="false" disabled="#{!pi.received}" action="/lab_patient_report" actionListener="#{patientReportController.createNewReport(pi)}" >
+                                    <p:commandLink id="btnNewReport" ajax="false" disabled="#{!pi.received}" action="/lab/patient_report" actionListener="#{patientReportController.createNewReport(pi)}" >
                                         <f:setPropertyActionListener value="#{pi}" target="#{patientReportController.currentPtIx}"></f:setPropertyActionListener>
                                         <p:graphicImage library="image" styleClass="standedicon" name="data_entry.png" ></p:graphicImage>
                                     </p:commandLink>
