--- a/src/main/webapp/credit/index_inward_due_access.xhtml
+++ b/src/main/webapp/credit/index_inward_due_access.xhtml
@@ -14,27 +14,30 @@
 
                 <h:form>
                     <p:panel header="Inward Dues And Access">
-                        <h:panelGrid columns="2" styleClass="alignTop" style="margin: auto;" > 
-                            <h:panelGrid columns="2"  >
-                            <p:panel header="Dues" style="width: 400px;margin:auto;" collapsed="true" toggleable="true"  >
-                                <p:commandButton action="/credit/inward_due_search" actionListener="#{creditCompanyDueController.makeNull()}" value="Due Search" ajax="false" styleClass="linkButton" onclick="onSubmitButton();"  />
-                                <p:commandButton action="/credit/inward_due_search_credit_company" actionListener="#{creditCompanyDueController.makeNull()}" value="Due Search(Credit Company)" ajax="false" styleClass="linkButton" onclick="onSubmitButton();"  />
-                                <p:commandButton  action="/credit/inward_due_age" actionListener="#{creditCompanyDueController.makeNull()}" value="Due Age" ajax="false" styleClass="linkButton" onclick="onSubmitButton();"/>
-                                <p:commandButton  action="/credit/inward_due_age_credit_company_detail" actionListener="#{creditCompanyDueController.makeNull()}" value="Due Age Detail" ajax="false" styleClass="linkButton" onclick="onSubmitButton();"/>
-                                <p:commandButton  action="/credit/inward_due_age_credit_company" actionListener="#{creditCompanyDueController.makeNull()}" value="Due Age(Credit Company)" ajax="false" styleClass="linkButton" onclick="onSubmitButton();"/>                            
+                        <p:tabView orientation="left" > 
 
-                            </p:panel>
+                            <p:tab title=" Dues" >
+                                <h:panelGrid columns="1" >  
+
+
+                                    <p:commandButton action="/credit/inward_due_search" actionListener="#{creditCompanyDueController.makeNull()}" value="Due Search" ajax="false" styleClass="linkButton" onclick="onSubmitButton();"  />
+                                    <p:commandButton action="/credit/inward_due_search_credit_company" actionListener="#{creditCompanyDueController.makeNull()}" value="Due Search(Credit Company)" ajax="false" styleClass="linkButton" onclick="onSubmitButton();"  />
+                                    <p:commandButton  action="/credit/inward_due_age" actionListener="#{creditCompanyDueController.makeNull()}" value="Due Age" ajax="false" styleClass="linkButton" onclick="onSubmitButton();"/>
+                                    <p:commandButton  action="/credit/inward_due_age_credit_company_detail" actionListener="#{creditCompanyDueController.makeNull()}" value="Due Age Detail" ajax="false" styleClass="linkButton" onclick="onSubmitButton();"/>
+                                    <p:commandButton  action="/credit/inward_due_age_credit_company" actionListener="#{creditCompanyDueController.makeNull()}" value="Due Age(Credit Company)" ajax="false" styleClass="linkButton" onclick="onSubmitButton();"/>                            
                                 </h:panelGrid>
-                        <h:panelGrid columns="2"  >
-                            <p:panel header="Excess" style="width: 400px;margin:auto;" collapsed="true" toggleable="true"  >
-                                <p:commandButton action="/credit/credit_company_inward_access" actionListener="#{creditCompanyDueController.makeNull()}" value="Excess Search" ajax="false"  styleClass="linkButton" onclick="onSubmitButton();"/>
-                                <p:commandButton   action="/credit/credit_company_inward_access_age" actionListener="#{creditCompanyDueController.makeNull()}" value="Excess Age" ajax="false" styleClass="linkButton" onclick="onSubmitButton();" />
-                                <p:commandButton action="/credit/cash_inward_access" actionListener="#{creditCompanyDueController.makeNull()}" value="Excess Search" ajax="false"  styleClass="linkButton" onclick="onSubmitButton();"/>
-                                <p:commandButton   action="/credit/cash_inward_access_age" actionListener="#{creditCompanyDueController.makeNull()}" value="Excess Age" ajax="false" styleClass="linkButton" onclick="onSubmitButton();" />
-                            </p:panel>
+                            </p:tab>
 
-                        </h:panelGrid>
-                        </h:panelGrid>
+                            <p:tab title=" Excess" >
+                                <h:panelGrid columns="1" >  
+
+                                    <p:commandButton action="/credit/credit_company_inward_access" actionListener="#{creditCompanyDueController.makeNull()}" value="Excess Search" ajax="false"  styleClass="linkButton" onclick="onSubmitButton();"/>
+                                    <p:commandButton   action="/credit/credit_company_inward_access_age" actionListener="#{creditCompanyDueController.makeNull()}" value="Excess Age" ajax="false" styleClass="linkButton" onclick="onSubmitButton();" />
+                                    <p:commandButton action="/credit/cash_inward_access" actionListener="#{creditCompanyDueController.makeNull()}" value="Excess Search" ajax="false"  styleClass="linkButton" onclick="onSubmitButton();"/>
+                                    <p:commandButton   action="/credit/cash_inward_access_age" actionListener="#{creditCompanyDueController.makeNull()}" value="Excess Age" ajax="false" styleClass="linkButton" onclick="onSubmitButton();" />
+                                </h:panelGrid>
+                            </p:tab>
+                        </p:tabView>
                     </p:panel>
                 </h:form>
             </ui:define>
