--- a/src/main/webapp/credit/index_opd_due_access.xhtml
+++ b/src/main/webapp/credit/index_opd_due_access.xhtml
@@ -14,22 +14,27 @@
 
                 <h:form>
                     <p:panel header="OPD Dues and Access">
-                        <h:panelGrid columns="2" styleClass="alignTop" style="margin: auto;" >
-                            <p:panel header="OPD Credit Due" style="width: 400px;margin: auto;" collapsed="true" toggleable="true">
-                                <h:panelGrid columns="1">
+                        <p:tabView orientation="left" > 
+
+                            <p:tab title=" OPD Credit Due" >
+                                <h:panelGrid columns="1" >  
+
+
                                     <p:commandButton action="/credit/credit_company_opd_due" actionListener="#{creditCompanyDueController.makeNull()}" value="Due Search" ajax="false" styleClass="linkButton" onclick="onSubmitButton();"  />
                                     <p:commandButton action="/credit/credit_company_opd_due_by_bill_item" actionListener="#{creditCompanyDueController.makeNull()}" value="Due Search (Bill Item)" ajax="false" styleClass="linkButton" onclick="onSubmitButton();"  />
                                     <p:commandButton  action="/credit/credit_company_opd_due_age" actionListener="#{creditCompanyDueController.makeNull()}" value="Due Age" ajax="false" styleClass="linkButton" onclick="onSubmitButton();"/>
                                 </h:panelGrid>
-                            </p:panel>
+                            </p:tab>
 
-                            <p:panel header="OPD Credit Excess" style="width: 400px;margin: auto;" collapsed="true" toggleable="true">
-                                <h:panelGrid columns="1">
+
+                            <p:tab title=" OPD Credit Excess" >
+                                <h:panelGrid columns="1" > 
+
                                     <p:commandButton action="/credit/credit_company_opd_access" actionListener="#{creditCompanyDueController.makeNull()}" value="Excess Search" ajax="false"  styleClass="linkButton" onclick="onSubmitButton();"/>
-                            <p:commandButton   action="/credit/credit_company_opd_access_age" actionListener="#{creditCompanyDueController.makeNull()}" value="Excess Age" ajax="false" styleClass="linkButton" onclick="onSubmitButton();" />
+                                    <p:commandButton   action="/credit/credit_company_opd_access_age" actionListener="#{creditCompanyDueController.makeNull()}" value="Excess Age" ajax="false" styleClass="linkButton" onclick="onSubmitButton();" />
                                 </h:panelGrid>
-                            </p:panel>
-                        </h:panelGrid>
+                            </p:tab>
+                        </p:tabView>
 
                     </p:panel>                    
                 </h:form>
