--- a/src/main/webapp/credit/index_pharmacy_due_access.xhtml
+++ b/src/main/webapp/credit/index_pharmacy_due_access.xhtml
@@ -13,24 +13,27 @@
             <ui:define name="content">
 
                 <h:form>
-                    <p:panel header="Inward Dues And Access">
-                        <h:panelGrid columns="2" styleClass="alignTop" style="margin: auto;" > 
-                            <h:panelGrid columns="2"  >
-                            <p:panel header="Dues" style="width: 400px;margin:auto;" collapsed="true" toggleable="true"  >
-                                <p:commandButton action="/credit/credit_company_pharmacy_due" actionListener="#{creditCompanyDueController.makeNull()}" value="Due" ajax="false" styleClass="linkButton" onclick="onSubmitButton();"  />
-                                <p:commandButton  action="/credit/credit_company_pharmacy_due_age" actionListener="#{creditCompanyDueController.makeNull()}" value="Due Age" ajax="false" styleClass="linkButton" onclick="onSubmitButton();"/>                            
-                            </p:panel>
-                                </h:panelGrid>
-                        <h:panelGrid columns="2"  >
-                            <p:panel header="Excess" style="width: 400px;margin:auto;" collapsed="true" toggleable="true"  >
-<!--                                <p:commandButton action="/credit/credit_company_inward_access" actionListener="#{creditCompanyDueController.makeNull()}" value="Excess Search" ajax="false"  styleClass="linkButton" onclick="onSubmitButton();"/>
-                                <p:commandButton   action="/credit/credit_company_inward_access_age" actionListener="#{creditCompanyDueController.makeNull()}" value="Excess Age" ajax="false" styleClass="linkButton" onclick="onSubmitButton();" />
-                                <p:commandButton action="/credit/cash_inward_access" actionListener="#{creditCompanyDueController.makeNull()}" value="Excess Search" ajax="false"  styleClass="linkButton" onclick="onSubmitButton();"/>
-                                <p:commandButton   action="/credit/cash_inward_access_age" actionListener="#{creditCompanyDueController.makeNull()}" value="Excess Age" ajax="false" styleClass="linkButton" onclick="onSubmitButton();" />-->
-                            </p:panel>
+                    <p:panel header="Pharmacy Dues And Access">
+                        <p:tabView orientation="left" > 
 
-                        </h:panelGrid>
-                        </h:panelGrid>
+                            <p:tab title=" Dues" >
+                                <h:panelGrid columns="1" >  
+
+                                    <p:commandButton action="/credit/credit_company_pharmacy_due" actionListener="#{creditCompanyDueController.makeNull()}" value="Due" ajax="false" styleClass="linkButton" onclick="onSubmitButton();"  />
+                                    <p:commandButton  action="/credit/credit_company_pharmacy_due_age" actionListener="#{creditCompanyDueController.makeNull()}" value="Due Age" ajax="false" styleClass="linkButton" onclick="onSubmitButton();"/>                            
+                                </h:panelGrid>
+                            </p:tab>
+
+                            <p:tab title=" Excess" >
+                                <h:panelGrid columns="1" > 
+
+<!--                                <p:commandButton action="/credit/credit_company_inward_access" actionListener="#{creditCompanyDueController.makeNull()}" value="Excess Search" ajax="false"  styleClass="linkButton" onclick="onSubmitButton();"/>
+         <p:commandButton   action="/credit/credit_company_inward_access_age" actionListener="#{creditCompanyDueController.makeNull()}" value="Excess Age" ajax="false" styleClass="linkButton" onclick="onSubmitButton();" />
+         <p:commandButton action="/credit/cash_inward_access" actionListener="#{creditCompanyDueController.makeNull()}" value="Excess Search" ajax="false"  styleClass="linkButton" onclick="onSubmitButton();"/>
+         <p:commandButton   action="/credit/cash_inward_access_age" actionListener="#{creditCompanyDueController.makeNull()}" value="Excess Age" ajax="false" styleClass="linkButton" onclick="onSubmitButton();" />-->
+                                </h:panelGrid>
+                            </p:tab>
+                        </p:tabView>
                     </p:panel>
                 </h:form>
             </ui:define>
