Improve Ui Signed-off-by: Gayan Malshan <agulugaha@outlook.com>

--- a/src/main/webapp/reportCashier/report_cashier.xhtml
+++ b/src/main/webapp/reportCashier/report_cashier.xhtml
@@ -12,6 +12,7 @@
 
             <ui:define name="content">
                 <h:form>
+                    <h:panelGrid columns="3" styleClass="alignTop">
                     <p:panel header="OPD Summaries" >
                         <p:tabView orientation="left">
                             <p:tab title="1) Cashier Reports">
@@ -87,6 +88,7 @@
                             </p:tab>
                         </p:tabView>
                     </p:panel>
+                    </h:panelGrid>
                 </h:form>
             </ui:define>
         </ui:composition>
